<resources>
    <string name="app_name">ViePay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_gallery">Hình ảnh</string>
    <string name="menu_slideshow">Slide</string>
    <string name="balance">Số dư</string>
    <string name="pages">Trang</string>
    <string name="app_pages">Trang ứng dụng</string>
    <string name="transactions">Giao dịch</string>
    <string name="transactionDetail">Chi tiết giao dịch</string>
    <string name="transactionVerification">Xác thực giao dịch</string>
    <string name="cards">Thẻ</string>
    <string name="savings">Tiết kiệm</string>
    <string name="bills">Hóa đơn</string>
    <string name="notifications">Thông báo</string>
    <string name="notifications_detail">Chi tiết thông báo</string>
    <string name="settings">Cài đặt</string>
    <string name="my_cards">Thẻ của tôi</string>
    <string name="card_number">Số thẻ</string>
    <string name="expiry">Ngày hết hạn</string>
    <string name="ccv">CCV</string>
    <string name="status">Trạng thái</string>
    <string name="success">Thành công</string>
    <string name="to">Đến</string>
    <string name="bank_name">Tên ngân hàng</string>
    <string name="transaction_category">Danh mục  giao dịch</string>
    <string name="receipt">Biên Lai</string>
    <string name="date">Ngày</string>
    <string name="amount">Số dư</string>
    <string name="add_a_card">Thêm thẻ</string>
    <string name="expiry_date">Ngày hết hạn</string>
    <string name="what_is_this">Đây là gi?</string>
    <string name="add">Thêm</string>
    <string name="log_in">Đăng nhập</string>
    <string name="fill_the_form_log_in">Điền vào khuôn mẫu</string>
    <string name="e_mail">E-mail</string>
    <string name="your_e_mail">E-mail của bạn</string>
    <string name="password">Mật khẩu</string>
    <string name="your_pw">Mật khẩu của bạn</string>
    <string name="register_now">Đăng Ký Ngay</string>
    <string name="forgot_pw">Quên mật khẩu</string>
    <string name="overview">Tổng quan</string>
    <string name="components">Thành phần</string>
    <string name="create_an_account">Thêm tài khoản mới</string>
    <string name="today">Hôm nay</string>
    <string name="my_saving">Tiết kiệm của tôi</string>
    <string name="new_saving_goal">Tiết kiệm mục tiêu mới</string>
    <string name="saving_category">Danh mục tiết kiệm</string>
    <string name="title">Tiêu đề</string>
    <string name="enter_total_amount">Nhập tổng số tiền</string>
    <string name="add_goal">Thêm mục tiêu mới</string>
    <string name="news">Tin tức</string>
    <string name="password_confirm">Nhập lại mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="type_email_fw">Nhập E-mail để khôi phục lại mật khẩu</string>
    <string name="reset_pw">Khôi phục mật khẩu</string>
    <string name="load_more">Tải thêm</string>
    <string name="add_balance">Thêm số dư</string>
    <string name="from">Từ</string>
    <string name="enter_amount">Nhập số tiền</string>
    <string name="deposit">Nạp tiền</string>
    <string name="withdraw_money">Rút tiền</string>
    <string name="withdraw">Rút</string>
    <string name="theme">Chủ đề</string>
    <string name="profile_settings">Cài đặt cá nhân</string>
    <string name="edit">Sửa</string>
    <string name="secirity">Bảo mật</string>
    <string name="_4029029">4029029</string>
    <string name="anderson_matt">Anderson Matt</string>
    <string name="menu">Menu</string>
    <string name="other">Khác</string>
    <string name="support">Hỗ trợ</string>
    <string name="logout">Đăng xuất</string>
    <string name="send_money">Gửi tiền</string>
    <string name="total_balance">Tổng số dư</string>
    <string name="send">Gửi</string>
    <string name="exchange">Chuyển đổi</string>
    <string name="view_all">Xem tất cả</string>
    <string name="add_new">Thêm mới</string>
    <string name="pay_now">Thanh toán ngay</string>
    <string name="monthly_bills">Hóa đơn hàng tháng</string>
    <string name="saving_goal">Tiết kiệm mục tiêu</string>
    <string name="lasted_news">Tin tức nổi bật</string>
    <string name="blog_post">Diễn đàn</string>
    <string name="confỉm">Xác thực</string>
</resources>