<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imgBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back"
        android:padding="17dp"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        app:tint="@color/colorMain" />

    <TextView
        android:text="Login"
        android:gravity="center"
        android:layout_marginEnd="15dp"
        android:textSize="15sp"
        android:textColor="@color/colorMain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:id="@+id/tv1"
        android:text="@string/register_now"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv2"
        android:text="@string/create_an_account"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEnter"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="7dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/e_mail"
                android:layout_marginTop="10dp"
                android:textSize="13sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:textSize="15sp"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:hint="@string/your_e_mail"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <TextView
                android:text="@string/password"
                android:layout_marginTop="10dp"
                android:textSize="13sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:textSize="15sp"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:hint="@string/your_pw"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <TextView
                android:text="@string/password_confirm"
                android:layout_marginTop="10dp"
                android:textSize="13sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:textSize="15sp"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:hint="Type password again"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:text="I agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="terms and conditions"
                    android:textColor="@color/colorMain"
                    android:layout_marginStart="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="7dp"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:background="@color/colorMain"
            android:text="@string/register"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>