<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/vGoneWithdraw"
        android:background="@color/black"
        android:alpha="0.4"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llDialog"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/llDialog"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/withdraw_money"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <TextView
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:text="@string/from"
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:alpha="0.7"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:text="Saving (*** 5019)"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="7dp"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <TextView
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:text="@string/to"
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:alpha="0.7"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:hint="Enter IBAN"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="7dp"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <TextView
            android:layout_marginStart="15dp"
            android:textColor="@color/black"
            android:text="@string/enter_total_amount"
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:alpha="0.7"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:text="$ 100"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="7dp"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="7dp"
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:background="@color/colorMain"
                android:text="@string/send"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>