<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/csMain"
    android:background="@drawable/card_jade_green"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:paddingBottom="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvBalanceTitle"
        android:text="@string/balance"
        android:textColor="@color/black"
        android:alpha="0.3"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvBalance"
        android:text="$ 1,256.54"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvBalanceTitle"
        app:layout_constraintStart_toStartOf="@id/tvBalanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvCardNumberTitle"
        android:text="@string/card_number"
        android:textColor="@color/black"
        android:alpha="0.3"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/tvBalance"
        app:layout_constraintStart_toStartOf="@id/tvBalance"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvCardNumber"
        android:textSize="18sp"
        android:text="* * * *  9 9 0 5"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvCardNumberTitle"
        app:layout_constraintStart_toStartOf="@id/tvCardNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvExpiry"
        android:text="@string/expiry"
        android:textColor="@color/black"
        android:alpha="0.3"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/tvCardNumber"
        app:layout_constraintStart_toStartOf="@id/tvCardNumber"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="12/25"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/tvExpiry"
        app:layout_constraintStart_toStartOf="@id/tvExpiry"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvCCV"
        android:text="@string/ccv"
        android:textColor="@color/black"
        android:alpha="0.3"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textAllCaps="true"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvCardNumber"
        app:layout_constraintStart_toEndOf="@id/tvExpiry"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="232"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/tvCCV"
        app:layout_constraintStart_toStartOf="@id/tvCCV"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>