<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.transaction_detail.TransactionDetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgBask"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/ic_back"
                android:padding="17dp"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                app:tint="@color/colorMain" />

            <TextView
                android:text="@string/transactionDetail"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_trash"
                android:padding="17dp"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                app:tint="@color/colorMain" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card3"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="28dp"
        android:layout_width="56dp"
        android:layout_height="56dp">

        <ImageView
            android:background="@color/colorMain"
            android:padding="15dp"
            android:rotation="90"
            android:src="@drawable/ic_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvPaymentSend"
        app:layout_constraintTop_toBottomOf="@id/card3"
        app:layout_constraintStart_toStartOf="@id/card3"
        app:layout_constraintEnd_toEndOf="@id/card3"
        android:layout_width="wrap_content"
        android:text="Payment Sent"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <!--Status-->
    <TextView
        android:id="@+id/tvStatusTitle"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvPaymentSend"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/status"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvPaymentSend"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/success"
        android:textColor="#76d8cb"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/v1"
        app:layout_constraintStart_toStartOf="@id/tvStatusTitle"
        app:layout_constraintEnd_toEndOf="@id/tvStatus"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvStatusTitle"
        android:layout_width="0dp"
        android:layout_height="0.5dp"/>

    <!--To-->
    <TextView
        android:id="@+id/tvTo"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/v1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/to"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/tvTo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:text="Anderson"
        android:textColor="@color/black"
        android:alpha="0.7"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/v2"
        app:layout_constraintStart_toStartOf="@id/tvStatusTitle"
        app:layout_constraintEnd_toEndOf="@id/tvStatus"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvTo"
        android:layout_width="0dp"
        android:layout_height="0.5dp"/>

    <!--BankName-->
    <TextView
        android:id="@+id/tvBankName"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/v2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/bank_name"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/tvBankName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:text="Envato Bank"
        android:textColor="@color/black"
        android:alpha="0.7"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/v3"
        app:layout_constraintStart_toStartOf="@id/tvStatusTitle"
        app:layout_constraintEnd_toEndOf="@id/tvStatus"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvBankName"
        android:layout_width="0dp"
        android:layout_height="0.5dp"/>

    <!--Transaction Category-->
    <TextView
        android:id="@+id/tvCategory"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/v3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/transaction_category"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/tvCategory"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:text="Shopping"
        android:textColor="@color/black"
        android:alpha="0.7"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/v4"
        app:layout_constraintStart_toStartOf="@id/tvStatusTitle"
        app:layout_constraintEnd_toEndOf="@id/tvStatus"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvCategory"
        android:layout_width="0dp"
        android:layout_height="0.5dp"/>

    <!--Receipt-->
    <TextView
        android:id="@+id/tvReceipt"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/v4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/receipt"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/tvReceipt"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:text="Yes"
        android:textColor="@color/black"
        android:alpha="0.7"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/v5"
        app:layout_constraintStart_toStartOf="@id/tvStatusTitle"
        app:layout_constraintEnd_toEndOf="@id/tvStatus"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvReceipt"
        android:layout_width="0dp"
        android:layout_height="0.5dp"/>

    <!--Date-->
    <TextView
        android:id="@+id/tvDate"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/v5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/date"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:text="Sep 25, 2020 10:45 AM"
        android:textColor="@color/black"
        android:alpha="0.7"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/v6"
        app:layout_constraintStart_toStartOf="@id/tvStatusTitle"
        app:layout_constraintEnd_toEndOf="@id/tvStatus"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvDate"
        android:layout_width="0dp"
        android:layout_height="0.5dp"/>

    <!--Date-->
    <TextView
        android:id="@+id/tvAmount"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/v6"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/amount"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="@id/tvAmount"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:text="$ 24"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>